add server test